--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0;
+    height: 100vh;
+}
+
 .container, 
 .item {
     padding: 0px;
@@ -18,4 +27,20 @@
 
 .item:hover {
     background-color: #a3a3a3;
+}
+
+.scratch-control{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-evenly;
+
+    padding: 1.5rem;
+    margin: 0 3rem;
+    height: 10rem;
+    background-color: red;
+}
+
+.scratch-control > button {
+    padding: 0.5rem;
 }
