--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
+
+:root {
+    --title-font: "Honk", system-ui;
+    --bg-color: #64c7f3;
+    --fg-color: #f2e73d;
+}
+
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
     margin: 0;
     height: 100vh;
+    background-color: var(--bg-color);
+}
+
+h1 {
+    font-family: var(--title-font);
+}
+
+div#game {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container, 
@@ -22,7 +42,7 @@ body {
 }
 
 .item {
-    background-color: #dcdcdc;
+    background-color: #fff;
 }
 
 .item:hover {
@@ -38,7 +58,7 @@ body {
     padding: 1.5rem;
     margin: 0 3rem;
     height: 10rem;
-    background-color: red;
+    background-color: var(--fg-color);
 }
 
 .scratch-control > button {
